deploy-openvsx.yaml
kind: Service
apiVersion: v1
metadata:
  name: open-vsx-server
  namespace: che-openvsx
spec:
  ports:
    - name: open-vsx-server
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 0
  selector:
    name: open-vsx-server
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: open-vsx-server
  namespace: che-openvsx
spec:
  to:
    kind: Service
    name: open-vsx-server
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: open-vsx-server
  namespace: che-openvsx
spec:
  strategy:
    type: Recreate
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    activeDeadlineSeconds: 21600
  replicas: 1
  selector:
    matchLabels:
      name: open-vsx-server
  template:
    metadata:
      labels:
        name: open-vsx-server
    spec:
      containers:
        - name: open-vsx-server
          image: image-registry.openshift-image-registry.svc:5000/che-openvsx/open-vsx-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /user
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /user
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 3072Mi
          terminationMessagePath: /dev/termination-log
          capabilities: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            privileged: false
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      securityContext:
        seccompProfile:
          type: RuntimeDefault
